testsuite/tests/explicit-dicts/should_fail/Roles8.stderr

Roles8.hs:21:6: error:
    • Explicit dictionary application to: ‘Ord a’
      is not allowed because of instance incoherence:
      In the context ‘a ~ b’
        Type variable ‘a’ has role Nominal
    • In the expression: evilInsert ((reverseOrd @Int :: Ord a))
      In an equation for ‘f8’:
          f8 = evilInsert ((reverseOrd @Int :: Ord a))
